# paper_reader

./: .gitignore  AGENTS.md  HOW_TO_CREATE_YOUR_OWN.md  Makefile  README.md  __init__.py  __main__.py  main.py  models.py  pyproject.toml  pyrightconfig.json  state.py
insight_extractor/: __init__.py  extractor.py
interest_manager/: __init__.py  manager.py
paper_discovery/: __init__.py  discoverer.py
paper_ingestor/: __init__.py  ingestor.py
paper_store/: __init__.py  store.py
tests/: test_insight_extractor.py  test_integration.py  test_interest_manager.py  test_paper_discovery.py  test_paper_ingestor.py  test_paper_store.py
