[project]
name = "paper_reader"
version = "0.1.0"
description = "PhD research paper tracker with automatic insight extraction"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1.0",
    "pypdf>=4.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
